// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Connected/ItemNavigator with 1/4 columns 1`] = `
<ItemNavigator store={{}} items={[{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"}]} selected={null} dispatch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Container tag={"div"}>
    <div className={"container"}>
      <Row tag={"div"} key={"0"}>
        <div className={"row"}>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(OutlineItem) />
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Container>
</ItemNavigator>
`;

exports[`Storyshots Connected/ItemNavigator with 2/4 columns 1`] = `
<ItemNavigator store={{}} items={[{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"},{"id":"test-id-2","name":"Thing is due","category":"due","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":500000,"due":500000,"archived":false,"archivedDate":null,"status":"in progress"}]} selected={null} dispatch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Container tag={"div"}>
    <div className={"container"}>
      <Row tag={"div"} key={"0"}>
        <div className={"row"}>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-2","name":"Thing is due","category":"due","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":500000,"due":500000,"archived":false,"archivedDate":null,"status":"in progress"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(OutlineItem) />
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Container>
</ItemNavigator>
`;

exports[`Storyshots Connected/ItemNavigator with 3/4 columns 1`] = `
<ItemNavigator store={{}} items={[{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"},{"id":"test-id-2","name":"Thing is due","category":"due","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":500000,"due":500000,"archived":false,"archivedDate":null,"status":"in progress"},{"id":"test-id-3","name":"Create a thing","category":"create","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":200000,"due":200000,"archived":false,"archivedDate":null,"status":"ready"}]} selected={null} dispatch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Container tag={"div"}>
    <div className={"container"}>
      <Row tag={"div"} key={"0"}>
        <div className={"row"}>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-2","name":"Thing is due","category":"due","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":500000,"due":500000,"archived":false,"archivedDate":null,"status":"in progress"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-3","name":"Create a thing","category":"create","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":200000,"due":200000,"archived":false,"archivedDate":null,"status":"ready"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(OutlineItem) />
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Container>
</ItemNavigator>
`;

exports[`Storyshots Connected/ItemNavigator with 4/4 columns 1`] = `
<ItemNavigator store={{}} items={[{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"},{"id":"test-id-2","name":"Thing is due","category":"due","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":500000,"due":500000,"archived":false,"archivedDate":null,"status":"in progress"},{"id":"test-id-3","name":"Create a thing","category":"create","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":200000,"due":200000,"archived":false,"archivedDate":null,"status":"ready"},{"id":"test-id-4","name":"Create a thing","category":"create","description":"dadasdasd.","created":1000,"due":1000,"archived":false,"archivedDate":null,"status":"done"}]} selected={null} dispatch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Container tag={"div"}>
    <div className={"container"}>
      <Row tag={"div"} key={"0"}>
        <div className={"row"}>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-2","name":"Thing is due","category":"due","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":500000,"due":500000,"archived":false,"archivedDate":null,"status":"in progress"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-3","name":"Create a thing","category":"create","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":200000,"due":200000,"archived":false,"archivedDate":null,"status":"ready"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-4","name":"Create a thing","category":"create","description":"dadasdasd.","created":1000,"due":1000,"archived":false,"archivedDate":null,"status":"done"}} />
            </div>
          </Col>
        </div>
      </Row>
      <Row tag={"div"} key={"1"}>
        <div className={"row"}>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(OutlineItem) />
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Container>
</ItemNavigator>
`;

exports[`Storyshots Connected/ItemNavigator with archived showing 1`] = `
<ItemNavigator store={{}} items={[{"id":"test-id-5","name":"Create a thing","category":"create","description":"dadasdasd.","created":1000,"due":1000,"archived":true,"archivedDate":2000000,"status":"done"}]} selected={null} dispatch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Container tag={"div"}>
    <div className={"container"}>
      <Row tag={"div"} key={"0"}>
        <div className={"row"}>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-5","name":"Create a thing","category":"create","description":"dadasdasd.","created":1000,"due":1000,"archived":true,"archivedDate":2000000,"status":"done"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(OutlineItem) />
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Container>
</ItemNavigator>
`;

exports[`Storyshots Connected/ItemNavigator with multiple items 1`] = `
<ItemNavigator store={{}} items={[{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"},{"id":"test-id-2","name":"Thing is due","category":"due","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":500000,"due":500000,"archived":false,"archivedDate":null,"status":"in progress"},{"id":"test-id-3","name":"Create a thing","category":"create","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":200000,"due":200000,"archived":false,"archivedDate":null,"status":"ready"},{"id":"test-id-4","name":"Create a thing","category":"create","description":"dadasdasd.","created":1000,"due":1000,"archived":false,"archivedDate":null,"status":"done"}]} selected={null} dispatch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Container tag={"div"}>
    <div className={"container"}>
      <Row tag={"div"} key={"0"}>
        <div className={"row"}>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-2","name":"Thing is due","category":"due","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":500000,"due":500000,"archived":false,"archivedDate":null,"status":"in progress"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-3","name":"Create a thing","category":"create","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":200000,"due":200000,"archived":false,"archivedDate":null,"status":"ready"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-4","name":"Create a thing","category":"create","description":"dadasdasd.","created":1000,"due":1000,"archived":false,"archivedDate":null,"status":"done"}} />
            </div>
          </Col>
        </div>
      </Row>
      <Row tag={"div"} key={"1"}>
        <div className={"row"}>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(OutlineItem) />
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Container>
</ItemNavigator>
`;

exports[`Storyshots Connected/ItemNavigator with no items 1`] = `
<ItemNavigator store={{}} items={[]} selected={null} dispatch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Container tag={"div"}>
    <div className={"container"}>
      <Row tag={"div"} key={"alone"}>
        <div className={"row"}>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(OutlineItem) />
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Container>
</ItemNavigator>
`;

exports[`Storyshots Connected/ItemNavigator with selected item editor modal 1`] = `
<ItemNavigator store={{}} items={[{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"},{"id":"test-id-2","name":"Thing is due","category":"due","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":500000,"due":500000,"archived":false,"archivedDate":null,"status":"in progress"},{"id":"test-id-3","name":"Create a thing","category":"create","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":200000,"due":200000,"archived":false,"archivedDate":null,"status":"ready"},{"id":"test-id-4","name":"Create a thing","category":"create","description":"dadasdasd.","created":1000,"due":1000,"archived":false,"archivedDate":null,"status":"done"}]} selected={{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"}} dispatch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Container tag={"div"}>
    <div className={"container"}>
      <Row tag={"div"} key={"0"}>
        <div className={"row"}>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-2","name":"Thing is due","category":"due","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":500000,"due":500000,"archived":false,"archivedDate":null,"status":"in progress"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-3","name":"Create a thing","category":"create","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":200000,"due":200000,"archived":false,"archivedDate":null,"status":"ready"}} />
            </div>
          </Col>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(Item) item={{"id":"test-id-4","name":"Create a thing","category":"create","description":"dadasdasd.","created":1000,"due":1000,"archived":false,"archivedDate":null,"status":"done"}} />
            </div>
          </Col>
        </div>
      </Row>
      <Row tag={"div"} key={"1"}>
        <div className={"row"}>
          <Col tag={"div"} breakpoints={["xs","sm","md","lg","xl"]}>
            <div className={"col"}>
              <Connect(OutlineItem) />
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Container>
</ItemNavigator>
`;
